fixed homepage width and sidebar resizing overlap issue

--- a/_sass/overrides/_variables.scss
+++ b/_sass/overrides/_variables.scss
@@ -18,3 +18,7 @@ $base0f: #ff5370;
 
 
 $primary-color: #FFF;
+
+$large: 1300px;
+$x-large: 1440px;
+$max-width: $x-large;
