--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -32,6 +32,7 @@ $breakpoint-text-size-change-large: 1280px;
 
   .archive, article.page {
     float: left;
+    width: 100%;
     padding: 0;
   }
 }
